2005-10-26  Andrew Cagney  <cagney@redhat.com>

	* observers/SyscallObserver.java: Add .updateSyscallXXX.
	* EventLogger.java: Ditto.

2005-10-26  Sami Wagiaalla  <swagiaal@redhat.com>

	* ActionPool.java (AddForkObserver): Replace RuntimeExceptions with
	appropriet back function calls.
	* observers/TaskForkedObserver.java: Now implements
	TaskObserver.Forked.
	Removed ecj 3.1.1 warnings( Modified patch by Jeff Johnston).
	* MainWindow.java: Removed ecj 3.1.1 warnings (Modified patch by
	Jeff Johnston).
	* TearOffNotebook.java: Removed ecj 3.1.1 warnings (Modified patch
	by Jeff Johnston).
	* ProgramViewPage.java: Removed ecj 3.1.1 warnings (Modified patch
	by Jeff Johnston).
	
2005-10-26  Andrew Cagney  <cagney@redhat.com>

	* observers/SyscallObserver.java: Update TaskObserver.Syscall
	interface methods to match change to .updateSyscallEnter, and
	.updateSyscallExit.
	* EventLogger.java: Ditto.

2005-10-26  Phil Muldoon  <pmuldoon@redhat.com>

	* ConsoleWindow.java: Added Copyright/License Header.
	* TearOffNotebook.java: Ditto.
	* TaskStatusWidget.java: Ditto.
	* StatusWidget.java: Ditto.
	* ProgramViewPage.java: Ditto.
	* ProgramDataModel.java: Ditto.
	* ProgramAddWindow.java: Ditto.
	* ProcStatusWidget.java: Ditto.
	* PreferenceWidget.java: Ditto.
	* PreferencesWindow.java: Ditto.
	* NotifyingLabel.java: Ditto.
	* MenuBar.java: Ditto.
	* InfoWidget.java: Ditto.
	* GuiObservable.java: Ditto.
	* GuiData.java: Ditto.
	* EventFormatter.java: Ditto.
	* CustomeObserverWindow.java: Ditto.

2005-10-25  Andrew Cagney  <cagney@redhat.com>

	* ActionPool.java: Replace calls to Task .requestAddObserver, and
	.requestDeleteObserver with either a call to
	.requestAddExecedObserver, .requestDeleteExecedObserver,
	.requestAddTerminatingObsever, .requestDeleteTerminatingObserver,
	.requestAddForkedObserver, .requestDeleteForkedObserver,
	.requestAddClonedObserver, .requestDeleteClonedObserver, or a
	RuntimeException throw.
	
2005-10-25  Sami Wagiaalla  <swagiaal@redhat.com>
